ResourceLoaderSkinModule: `content` => `toc`, `content-thumbnails`
The `content` feature is too ambigious in meaning.
Moving all the styles relating to the table of contents reduces
the content feature to a group of image styles.

CSS rules for Tidy are legacy, added to the new
content.parser-output.less feature which defaults to on for all skins.

Bug: T269877
Change-Id: Ica54358576ee59c4cb75ef941421e8c0329336d9

--- a/resources/src/mediawiki.skinning/content.parser-output.less
+++ b/resources/src/mediawiki.skinning/content.parser-output.less
@@ -30,3 +30,9 @@
 	direction: ltr;
 	unicode-bidi: embed;
 }
+
+// Hide elements that are marked as "empty" according to legacy Tidy rules,
+// except if a client script removes the `.mw-hide-empty-elt` class from the body.
+/* body */ .mw-hide-empty-elt .mw-parser-output .mw-empty-elt {
+	display: none;
+}
