--- a/resources/src/mediawiki.skinning/interface.less
+++ b/resources/src/mediawiki.skinning/interface.less
@@ -33,8 +33,8 @@ textarea {
 }
 
 .usermessage {
-	background-color: #ffce7b;
-	border: 1px solid #ffa500;
+	background-color: #fef6e7;
+	border: 1px solid #fc3;
 	color: #000;
 	font-weight: bold;
 	margin: 2em 0 1em;
