Use Accent50 for progress indicators
Bug: T266028
Change-Id: I77abed0465074c72138b55ee2197fe83e31b5c4a

--- a/resources/src/mediawiki.rcfilters/styles/mw.rcfilters.less
+++ b/resources/src/mediawiki.rcfilters/styles/mw.rcfilters.less
@@ -121,7 +121,7 @@
 		&:before,
 		&:after {
 			content: '';
-			background-color: @colorGray7;
+			background-color: @color-primary;
 			display: block;
 			float: left;
 			width: @rcfilters-spinner-size;
