mediawiki.ui: Use `min-width` and `min-height` in `px` values
Unify minimum sizing to OOUI.

Bug: T277663
Change-Id: Iba5367f960ee77eb6b20730fe2031d366c1e94aa

--- a/resources/src/mediawiki.less/mediawiki.ui/variables.less
+++ b/resources/src/mediawiki.less/mediawiki.ui/variables.less
@@ -84,6 +84,7 @@
 @box-shadow-input-binary--active: inset 0 0 0 1px @color-primary--active;
 
 // Icon related variables
+@min-size-icon: 20px;
 @size-icon: 1.5em;
 @width-icon-gutter: 1em;
 
