mediawiki.mixins: Re-introduce `-webkit-hyphens` vendor prefix
Partly revert Ibf1c81d10, which falsely slipped `-webkit-hyphens`
vendor prefix out of `hyphens` mixin. Hyphens support is on its own
messy in browsers and comes down to platform specific partly support
depending on which language used. Hence updated code documentation.
But orginal patch would have a possible regression on a subset of
our users.

Change-Id: I98f3a0be512d4a08739a3498b7f2ef4aa8f42543

--- a/resources/src/mediawiki.less/mediawiki.mixins.less
+++ b/resources/src/mediawiki.less/mediawiki.mixins.less
@@ -43,8 +43,13 @@
 	}
 
 	// CSS3 hyphenation
+	// Chrome < 55 and Android 4.0 Browser support "-webkit-hyphens: none",
+	// but not the "auto" property. It is advisable to set the @lang attribute
+	// on the HTML element to enable hyphenation support and improve accessibility.
+	// Chrome 55-87 only supports `auto` exclusively on Mac platform.
+	-webkit-hyphens: @value; // Safari 5.1+, iOS 4.2+
 	-moz-hyphens: @value;    // Firefox 6-42
-	-ms-hyphens: @value;     // IE 10-11, Edge 12+
+	-ms-hyphens: @value;     // IE 10-11, Edge 12-18
 	hyphens: @value;         // Firefox 43+, Chrome 55+, Android 62+, UC Browser 11.8+, Samsung 6.2+
 }
 
