--- a/resources/src/mediawiki.skinning/legacy.less
+++ b/resources/src/mediawiki.skinning/legacy.less
@@ -194,52 +194,7 @@ td.mw-submit {
 	float: left;
 }
 
-/**
- * Categories
- */
-#catlinks {
-	/**
-	 * Overrides text justification (user preference)
-	 * See T33990
-	 */
-	text-align: left;
-}
-
-.catlinks ul {
-	display: inline;
-	margin: 0;
-	padding: 0;
-	list-style: none none;
-}
-
-.catlinks li {
-	display: inline-block;
-	line-height: 1.25em;
-	border-left: 1px solid #a2a9b1;
-	margin: 0.125em 0;
-	padding: 0 0.5em;
-}
-
-.catlinks li:first-child {
-	padding-left: 0.25em;
-	border-left: 0;
-}
-
-/* (T7346) make category redirects italic */
-.catlinks li a.mw-redirect {
-	font-style: italic;
-}
-
-/**
- * Hidden categories
- */
-.mw-hidden-cats-hidden {
-	display: none;
-}
-
-.catlinks-allhidden {
-	display: none;
-}
+@import 'interface.category.less';
 
 /**
  * Convenience links to edit delete and protect reasons
