Create a content-tables feature split from legacy
The content-tables feature contains the styles for .wikitable, a
commonly used style of tables. The print styles for this table have
been included under the print media, split from commonPrint.css.
These styles are imported into commonPrint.css, which has changed
to use Less for this.
The .mw_metadata styles in commonPrint.css have been moved to the
resource loader module that already contains the other .mw_metadata
styles.

Bug: T278401

Change-Id: I37db62f466d8fdf8c9dc8adfdf497a0b7af9b6b2

--- a/resources/src/mediawiki.skinning/commonPrint.less
+++ b/resources/src/mediawiki.skinning/commonPrint.less
@@ -279,50 +279,7 @@ div.thumbinner {
 	border: 1pt solid #ddd;
 }
 
-/**
- * Table rendering
- */
-/* Compare `.wikitable` in shared.css */
-.wikitable,
-.mw_metadata {
-	background: #fff;
-	margin: 1em 0;
-	border: 1pt solid #aaa;
-	border-collapse: collapse;
-	font-size: 10pt;
-}
-
-.wikitable > caption,
-.mw_metadata caption {
-	padding: 5px;
-	font-size: 10pt;
-}
-
-.wikitable > tr > th,
-.wikitable > tr > td,
-.wikitable > * > tr > th,
-.wikitable > * > tr > td,
-.mw_metadata th,
-.mw_metadata td {
-	/* Important is required to override any inline styles provided by editors */
-	background: #fff !important; /* stylelint-disable-line declaration-no-important */
-	/* We need to also set color in case editors applied a light text color */
-	color: #000 !important; /* stylelint-disable-line declaration-no-important */
-	border: 1pt solid #aaa;
-	padding: 0.4em 0.6em;
-}
-
-.wikitable > tr > th,
-.wikitable > * > tr > th,
-.mw_metadata th {
-	text-align: center;
-}
-
-table.listing,
-table.listing td {
-	border: 1pt solid #000;
-	border-collapse: collapse;
-}
+@import 'content.tables-print.less';
 
 /**
  * Categories
