Move mw-datatables styles to mediawiki.pager.tablePager
These styles are specific to TablePager. The uses outside TablePager
can import the mediawiki.pager.tablePager module.

A conversion to TablePager would be a cleaner solution, tying the
class closer to TablePager, but the data structures don't really
lean themselves for that.

Bug: T278374
Change-Id: I33eb58403b0a16097e7486c8c07e3c03296d3dc0

--- a/resources/src/mediawiki.skinning/legacy.less
+++ b/resources/src/mediawiki.skinning/legacy.less
@@ -381,34 +381,7 @@ a.new {
 	clear: both;
 }
 
-/**
- * Data table style
- *
- * Table with suddle borders
- * and row-highlighting.
- */
-.mw-datatable {
-	border: 1px solid #a2a9b1;
-	border-collapse: collapse;
-}
-
-.mw-datatable td,
-.mw-datatable th {
-	border: 1px solid #a2a9b1;
-	padding: 0.2em 0.4em;
-}
-
-.mw-datatable th {
-	background-color: #eaeeff;
-}
-
-.mw-datatable td {
-	background-color: #fff;
-}
-
-.mw-datatable tr:hover td {
-	background-color: #eaf3ff;
-}
+@import '../mediawiki.pager.tablePager/DataTable.less';
 
 .mw-ajax-loader {
 	background-image: url( images/ajax-loader.gif );
