mediawiki.skinning: Change 'elements' file to LESS and remove obsolete property
Changing module file to LESS in order to use mediawiki.mixins to get
rid of obsolete `-webkit-box-sizing` property.

Bug: T277803
Change-Id: Ic292549e3cad616cb01e7a5eb8f8e039bc11d121

--- a/resources/src/mediawiki.skinning/elements.less
+++ b/resources/src/mediawiki.skinning/elements.less
@@ -6,6 +6,8 @@
  * This style sheet is used by the Monobook and Vector skins.
  */
 
+@import 'mediawiki.mixins';
+
 /* stylelint-disable selector-class-pattern */
 
 /* Links */
@@ -251,12 +253,10 @@ form {
 }
 
 textarea {
+	display: block;
+	.box-sizing( border-box );
 	width: 100%;
 	padding: 0.1em;
-	display: block;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
 }
 
 /* Emulate Center */
