Create mediawiki.actions.styles module for misc action styles
These are styles for actions that do not have a dedicated style module.
Given that the amount of css it contains it marginal, creating a
dedicated module for each action would be overkill.

Bug: T278504
Change-Id: Id03c81e7d5ebf179731649aa230def2e8e21ac02

--- a/resources/src/mediawiki.skinning/legacy.less
+++ b/resources/src/mediawiki.skinning/legacy.less
@@ -123,11 +123,6 @@ span.history-deleted {
  * Patrol stuff
  */
 
-div.patrollink {
-	font-size: 75%;
-	text-align: right;
-}
-
 /**
  * Forms
  */
@@ -147,16 +142,7 @@ td.mw-submit {
 
 @import 'content.thumbnails.less';
 @import 'interface.category.less';
-
-/**
- * Convenience links to edit delete and protect reasons
- */
-p.mw-protect-editreasons,
-p.mw-filedelete-editreasons,
-p.mw-delete-editreasons {
-	font-size: 90%;
-	text-align: right;
-}
+@import '../mediawiki.action/styles.less';
 
 /* The auto-generated edit comments */
 .autocomment,
@@ -256,17 +242,6 @@ a.new {
 #mw-usercsspreview,
 #mw-userjspreview {
 	direction: ltr;
-	unicode-bidi: embed;
-}
-
-#mw-revision-info,
-#mw-revision-info-current,
-#mw-revision-nav {
-	direction: ltr;
-}
-
-/* T14205 */
-#mw-credits a {
 	unicode-bidi: embed;
 }
 
