--- a/resources/src/mediawiki.special/newpages.less
+++ b/resources/src/mediawiki.special/newpages.less
@@ -1,3 +1,5 @@
+/* stylelint-disable selector-class-pattern */
+
 /*!
  * Styles for Special:NewPages
  */
@@ -11,4 +13,8 @@
 
 .mw-htmlform-ooui .mw-htmlform-submit-buttons + div {
 	margin-top: @ooui-spacing-medium;
+}
+
+.not-patrolled {
+	background-color: #ffa;
 }
