--- a/resources/src/mediawiki.special/special.less
+++ b/resources/src/mediawiki.special/special.less
@@ -137,6 +137,12 @@
 	text-align: right;
 }
 
+td.mw-revdel-checkbox,
+th.mw-revdel-checkbox {
+	padding-right: 10px;
+	text-align: center;
+}
+
 /* Special:Specialpages */
 .mw-specialpagerestricted {
 	font-weight: bold;
