Move legacy link styles to other skin features
content-parser-output receives styles for classes solely provided
by the parser, elements the rest.

One class was left untouched: a.new. This affect certain skins that
depend on the override order of legacy > elements. elements defines
a.new as #d33, which matches the Wikimedia Design Style Guide, but
legacy has #ba0000. Most skins override a.new with their preferred
colour, but some skins, such as Vector do not.

Bug: T278575
Change-Id: Ib60459eb6d15ea1345d6dcf7f46b239ada512cc8

--- a/resources/src/mediawiki.skinning/elements.less
+++ b/resources/src/mediawiki.skinning/elements.less
@@ -89,8 +89,21 @@ a.new:visited,
 	color: #b63;
 }
 
-.mw-parser-output a.external.free {
-	word-wrap: break-word;
+/* Underline preference */
+
+.mw-underline-always a {
+	text-decoration: underline;
+}
+
+.mw-underline-never a {
+	text-decoration: none;
+}
+
+/* Plainlinks - this can be used to switch
+ * off special external link styling */
+.plainlinks a.external {
+	background: none !important; /* stylelint-disable-line declaration-no-important */
+	padding: 0 !important; /* stylelint-disable-line declaration-no-important */
 }
 
 /* Inline Elements */
