Move category and editOptions styles out of interface
For .catlinks, these can go in interface-category, which has been
specifically created for category related stylings.
.editOptions is only for editing (action=edit) and should only be
shipped when necessary, and has therefore been moved to the
mediawiki.action.edit.styles module.

Bug: T278898
Bug: T278900
Change-Id: I9ce229f37b4bdef3903e6b2cb40248c00547aaa4

--- a/resources/src/mediawiki.skinning/interface.category.less
+++ b/resources/src/mediawiki.skinning/interface.category.less
@@ -9,6 +9,12 @@
 }
 
 .catlinks {
+	border: 1px solid #a2a9b1;
+	background-color: #f8f9fa;
+	padding: 5px;
+	margin-top: 1em;
+	clear: both;
+
 	ul {
 		display: inline;
 		margin: 0;
