Fix missing styles on diff
The markers for minor, bot, unpatrolled and new page edits used to
be bolded, but weren't after I3f45c95d2856c8fce2da5175b52089d4e629a41e.
Move the relevant styles to mediawiki.interface.helpers.styles, which
is used on all places where these markers can be found.

Bug: T279099
Change-Id: I7af935da13669b6519ba770b413cb1ef027cac1c

--- a/resources/src/mediawiki.interface.helpers.styles.less
+++ b/resources/src/mediawiki.interface.helpers.styles.less
@@ -1,3 +1,5 @@
+/* stylelint-disable selector-class-pattern */
+
 /**
  * Helper classes used across special pages
  */
@@ -57,7 +59,6 @@
 	}
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .comment--without-parentheses,
 .mw-changeslist-links,
 .mw-diff-bytes,
@@ -95,4 +96,15 @@
 	&:last-child:after {
 		content: '';
 	}
+}
+
+.unpatrolled {
+	font-weight: bold;
+	color: #d33;
+}
+
+.newpage,
+.minoredit,
+.botedit {
+	font-weight: bold;
 }
