mediawiki.less: Add `font-size-base` and `line-height-*` vars
Adding
- `font-size-base`, the pivotal point for several skin sizing properties
- `line-height-*` variables alongside.

They are all already in use in Vector or in OOUI.

Bug: T279479
Change-Id: Ie47995cc8b064f9fb99f9cd3f066e1a09ad704a8

--- a/resources/src/mediawiki.less/mediawiki.skin.defaults.less
+++ b/resources/src/mediawiki.less/mediawiki.skin.defaults.less
@@ -37,6 +37,21 @@
 // Minimum available screen width at which a device can be considered a desktop.
 @width-breakpoint-desktop: 1000px;
 
+// == Size properties beyond Box Model ==
+// These are the center point for skin sizing.
+// Note that these are recommended to be set in relative units like `em` in order to let users
+// override with own browser font size preference.
+// Font size
+@font-size-base: 1em;
+
+// Line Heights
+@line-height-base: 1.6;
+@line-height-heading: 1.3;
+// Form input labels for buttons, dropdowns, but also text input values.
+// Note that there are binary inputs in skins like Vector, that receive a different treatment
+// with name `*-input-binary`.
+@line-height-label: 1.5;
+
 // == Colors ==
 // Background Colors
 @background-color-base: #fff;
