Add classes to when a linked change is suppressed
This also tries to centralize adding logic of adding history-deleted
class as well. To make future changes easier.

This doesn't affect history deletion on files, recentchanges, and logs yet

Bug: T23272
Change-Id: I08f14f712479e1b170c606e2b64857f8386acd76

--- a/resources/src/mediawiki.interface.helpers.styles.less
+++ b/resources/src/mediawiki.interface.helpers.styles.less
@@ -134,6 +134,11 @@ span.history-deleted {
 	font-style: italic;
 }
 
+span.mw-history-suppressed {
+	font-weight: bold;
+	text-decoration-style: double;
+}
+
 /* The auto-generated edit comments */
 .autocomment,
 .autocomment a,
