--- a/mw-config/config.css
+++ b/mw-config/config.css
@@ -271,21 +271,13 @@ body {
 }
 
 /** WARNING BOX STYLES */
-/* FIXME: Replace with `warningbox` as part of https://phabricator.wikimedia.org/T232903 */
-.mw-infobox {
-	border: 2px solid #fc3;
-	margin: 0.5em;
-	clear: left;
-	overflow: hidden;
-}
-
-.mw-infobox-left {
+.mw-installer-box-left {
 	margin: 7px;
 	float: left;
 	width: 35px;
 }
 
-.mw-infobox-right {
+.mw-installer-box-right {
 	margin: 0.5em 0.5em 0.5em 49px;
 }
 /** END WARNING BOX STYLES */
