Installer: Simplify stylesheet
The installer needs a handful of the styles provided by
ResourceLoaderSkinModule. Reduce it to the minimum required in
preparation for the deprecation of the `legacy` feature.

Bug: T232903
Change-Id: I6a718232897448a94fe1ddda547ae5a5c671b7aa

--- a/mw-config/config.css
+++ b/mw-config/config.css
@@ -270,6 +270,10 @@ body {
 	background-image: url( images/installer-logo.png );
 }
 
+.visualClear {
+	clear: both;
+}
+
 /** WARNING BOX STYLES */
 .mw-installer-box-left {
 	margin: 7px;
