Create the `content-links` (and -external) ResourceLoaderSkinModule feature
After talking to Volker, the `elements` feature should not contain any
CSS classes. It should apply only on the tag level. I've updated documentation
to explain what's permitted here.

The link styling rules added in  b24bff67ed1c are instead added to a new
feature `content-links`. The existing `content-links` is renamed to
`content-links-external` and for backwards compatibility anyone enabling
`content-links` without `content-links-external` will get the new styles.

The existing legacy feature for backwards compatibility loads the `content-links`
feature which addresses the problem in Timeless with plainlinks styling being lost.

Bug: T279693
Bug: T255717
Bug: T278576
Change-Id: I6e55ed2880782533ea61df98cf16dbf36483d895

--- a/resources/src/mediawiki.skinning/legacy.less
+++ b/resources/src/mediawiki.skinning/legacy.less
@@ -128,6 +128,7 @@ td.mw-submit {
 	white-space: nowrap;
 }
 
+@import 'content.links.less';
 @import 'content.thumbnails.less';
 @import 'interface.category.less';
 @import '../mediawiki.action/styles.less';
