mediawiki.skinning/commonPrint.less: Import CSS with (inline)
The Less parser will output import statements for CSS files as-is,
but with the full physical paths, which isn't desirable and does
not work.

Using (inline) will make the parser copy the whole CSS file into
the parsed Less without parsing the CSS file itself.

Bug: T280929
Change-Id: I71a067ec461d5a452880c4472a2182b5aba3ca93

--- a/resources/src/mediawiki.skinning/commonPrint.less
+++ b/resources/src/mediawiki.skinning/commonPrint.less
@@ -76,7 +76,8 @@ sub {
 	margin: 0 !important; /* stylelint-disable-line declaration-no-important */
 }
 
-@import 'toc/print.css';
+/* (T280929) As this is a CSS file, we need to import it inline lest LESS parses the CSS and gets paths wrong. */
+@import (inline) 'toc/print.css';
 @import 'elements-print.less';
 @import 'content.thumbnails-print.less';
 @import 'content.tables-print.less';
