Provide styling for parser errors through content-parser-output
Bug: T281228
Change-Id: I8a7f864f3101367bc290cb99b9d0c63876ad89a9

--- a/resources/src/mediawiki.skinning/content.parser-output.less
+++ b/resources/src/mediawiki.skinning/content.parser-output.less
@@ -22,6 +22,13 @@
 	a.external.free {
 		word-wrap: break-word;
 	}
+
+	// error is a class outputted by the parser,
+	// when transcluding a page on itself, for example.
+	.error {
+		font-size: larger;
+		color: #d33;
+	}
 }
 
 /* External URLs should always be treated as LTR (T6330) */
