Unify `list-style` CSS
`list-style: none none` was a workaround for an IE 6 & 7 rendering issue.
Same goes for `list-style-image: none; list-style-type: none;` combination.
Let's unify to shorthand `list-style: none` for any non-ancient browser.

Change-Id: I05f00db8a08a9fc1523ea00fab91e91d3c00cab3

--- a/resources/src/mediawiki.skinning/toc/screen.less
+++ b/resources/src/mediawiki.skinning/toc/screen.less
@@ -42,8 +42,7 @@
 	}
 
 	ul {
-		list-style-type: none;
-		list-style-image: none;
+		list-style: none;
 		margin: 0.3em 0;
 		padding: 0;
 		text-align: left;
