--- a/resources/src/mediawiki.special.search.styles.css
+++ b/resources/src/mediawiki.special.search.styles.css
@@ -25,7 +25,7 @@
 }
 
 .mw-search-results li {
-	list-style: none none;
+	list-style: none;
 	/* Rely on `padding-bottom` here to add on top of `.content li` provided `margin`. */
 	padding-bottom: 24px;
 }
