--- a/mw-config/config.css
+++ b/mw-config/config.css
@@ -36,7 +36,7 @@ body {
 }
 
 .portal ul {
-	list-style: none none;
+	list-style: none;
 	margin: 0 0.5em;
 	font-size: 0.813em;
 	line-height: 1.4;
@@ -165,8 +165,7 @@ body {
 }
 
 .config-settings-block {
-	list-style-type: none;
-	list-style-image: none;
+	list-style: none;
 	margin: 0;
 	padding: 0;
 }
