mediawiki.skinning: Move `textarea` rule to 'elements.less'
Although this was targeted at somewhat discussable “interface” usage
of textareas, we already feature other “Wikimedia” opinionated styles
on elements in 'elements.less'. These will be simpler modifiable by
skins in future with variables.
Combining the rules simplifies mainentance.

Bug: T255717
Change-Id: I65f4325f42c859ce4d547258ed9d6cee8c0f0f7d

--- a/resources/src/mediawiki.skinning/elements.less
+++ b/resources/src/mediawiki.skinning/elements.less
@@ -211,6 +211,9 @@ textarea {
 	display: block;
 	.box-sizing( border-box );
 	width: 100%;
+	/* Support: Firefox */
+	/* Border rule required to override system appearance on Linux. T13641. */
+	border: 1px solid #c8ccd1;
 	padding: 0.1em;
 }
 
