--- a/resources/src/mediawiki.skinning/content.thumbnails.less
+++ b/resources/src/mediawiki.skinning/content.thumbnails.less
@@ -8,26 +8,13 @@
 
 /* stylelint-disable selector-class-pattern */
 @import 'variables';
+@import 'content.thumbnails-layout.less';
 
 /* Images */
 /* @noflip */
 div.floatright,
 table.floatright {
 	margin: @margin-floatright;
-}
-
-/* @noflip */ div.tright,
-div.floatright,
-table.floatright {
-	clear: right;
-	float: right;
-}
-
-/* @noflip */ div.tleft,
-div.floatleft,
-table.floatleft {
-	float: left;
-	clear: left;
 }
 
 /* @noflip */
@@ -102,13 +89,7 @@ div.thumbinner {
 /* Directionality-specific styles for thumbnails - their positioning depends on content language */
 
 /* @noflip */
-.mw-content-ltr .thumbcaption {
-	text-align: left;
-}
-
-/* @noflip */
 .mw-content-ltr .magnify {
-	float: right;
 	margin-left: 3px;
 	margin-right: 0;
 }
@@ -121,13 +102,7 @@ div.thumbinner {
 }
 
 /* @noflip */
-.mw-content-rtl .thumbcaption {
-	text-align: right;
-}
-
-/* @noflip */
 .mw-content-rtl .magnify {
-	float: left;
 	margin-left: 0;
 	margin-right: 3px;
 }
