--- a/resources/src/mediawiki.skinning/legacy.less
+++ b/resources/src/mediawiki.skinning/legacy.less
@@ -129,7 +129,7 @@ td.mw-submit {
 }
 
 @import 'content.links.less';
-@import 'content.thumbnails.less';
+@import 'content.thumbnails-layout.less';
 @import 'interface.category.less';
 @import '../mediawiki.action/styles.less';
 
