Display error boxes normally on changeslist special pages
When a PHP exception occurs, its error message is usually displayed
in a standard error box. However, error boxes were hidden on
Special:RecentChanges and other changeslists. That code was meant
to only hide a single error message on Special:RecentChangesLinked
(see 82622146f87a3e3e5e6a0c7bf36fa87d954be493, where it was added).

Change-Id: I386c88edd22a07d09520bc7878cce1093f986faa

--- a/resources/src/mediawiki.rcfilters/styles/mw.rcfilters.less
+++ b/resources/src/mediawiki.rcfilters/styles/mw.rcfilters.less
@@ -100,8 +100,7 @@
 		display: none;
 	}
 
-	/* stylelint-disable-next-line selector-class-pattern */
-	.errorbox {
+	.mw-recentchangeslinked-errorbox {
 		display: none;
 	}
 
