Remove Vector specific CSS selector for red-links in personal menu
Removes a CSS selector that is only used by Vector and makes red-links
in the personal menu a slightly different color than other red-links
in Vector (which are styled by rules in legacy.less).

Bug: T282884
Change-Id: Ie04182da57c968b34401a3811ce715424eaa181d

--- a/resources/src/mediawiki.skinning/content.links.less
+++ b/resources/src/mediawiki.skinning/content.links.less
@@ -3,8 +3,7 @@ a.stub {
 	color: #723;
 }
 
-a.new,
-#p-personal a.new {
+a.new {
 	color: #d33;
 }
 
@@ -25,8 +24,7 @@ a.mw-selflink:visited {
 	color: inherit;
 }
 
-a.new:visited,
-#p-personal a.new:visited {
+a.new:visited {
 	color: #a55858;
 }
 
