--- a/resources/lib/wvui/wvui-search.css
+++ b/resources/lib/wvui/wvui-search.css
@@ -3,18 +3,18 @@
   min-width: 32px;
   min-height: 32px;
   max-width: 28.75em;
+  margin: 0;
   border-width: 1px;
   border-style: solid;
   border-radius: 2px;
-  margin: 0;
-  padding-left: 12px;
   padding-right: 12px;
+  padding-left: 12px;
+  overflow: visible;
   font-family: inherit;
   font-size: inherit;
   font-weight: bold;
   text-transform: none;
   white-space: nowrap;
-  overflow: visible;
   -webkit-transition: border-color 100ms, background-color 100ms, color 100ms, box-shadow 100ms;
   transition: border-color 100ms, background-color 100ms, color 100ms, box-shadow 100ms;
 }
@@ -30,8 +30,8 @@
   cursor: pointer;
 }
 .wvui-button:not( [ disabled ] ):focus {
-  box-shadow: inset 0 0 0 1px #36c;
   border-color: #36c;
+  box-shadow: inset 0 0 0 1px #36c;
   outline: 1px solid transparent;
 }
 .wvui-button:not( [ disabled ] ):active {
@@ -41,6 +41,9 @@
 }
 .wvui-button[disabled] {
   border-color: transparent;
+}
+.wvui-button .wvui-icon {
+  color: inherit;
 }
 .wvui-button--framed:not( [ disabled ] ) {
   background-color: #f8f9fa;
@@ -55,112 +58,148 @@
   color: #000;
   border-color: #72777d;
 }
-.wvui-button--framed.wvui-button--progressive:not( [ disabled ] ) {
-  color: #fff;
-  background-color: #36c;
-  border-color: #36c;
-}
-.wvui-button--framed.wvui-button--progressive:not( [ disabled ] ):hover {
-  background-color: #447ff5;
-  border-color: #447ff5;
-}
-.wvui-button--framed.wvui-button--progressive:not( [ disabled ] ):focus {
-  background-color: #36c;
-  border-color: #36c;
-  box-shadow: inset 0 0 0 1px #36c, inset 0 0 0 2px #fff;
-}
-.wvui-button--framed.wvui-button--progressive:not( [ disabled ] ):active {
-  background-color: #2a4b8d;
-  border-color: #2a4b8d;
-  box-shadow: none;
-}
-.wvui-button--framed.wvui-button--destructive:not( [ disabled ] ) {
-  color: #fff;
-  background-color: #d33;
-  border-color: #d33;
-}
-.wvui-button--framed.wvui-button--destructive:not( [ disabled ] ):hover {
-  background-color: #ff4242;
-  border-color: #ff4242;
-}
-.wvui-button--framed.wvui-button--destructive:not( [ disabled ] ):focus {
-  background-color: #d33;
-  border-color: #d33;
-  box-shadow: inset 0 0 0 1px #d33, inset 0 0 0 2px #fff;
-}
-.wvui-button--framed.wvui-button--destructive:not( [ disabled ] ):active {
-  background-color: #b32424;
-  border-color: #b32424;
-  box-shadow: none;
-}
 .wvui-button--framed[disabled] {
   background-color: #c8ccd1;
   color: #fff;
 }
-.wvui-button--quiet {
-  background-color: transparent;
-  color: #202122;
-  border-color: transparent;
-}
-.wvui-button--quiet:not( [ disabled ] ):hover {
-  background-color: rgba(0, 24, 73, 0.02745098);
-  color: #000;
-}
-.wvui-button--quiet:not( [ disabled ] ):focus {
-  border-color: #36c;
-  box-shadow: inset 0 0 0 1px #36c, inset 0 0 0 2px #fff;
-}
-.wvui-button--quiet:not( [ disabled ] ):active {
-  background-color: rgba(0, 36, 73, 0.08235294);
-  border-color: #72777d;
-  box-shadow: none;
-}
-.wvui-button--quiet.wvui-button--progressive:not( [ disabled ] ) {
-  color: #36c;
-}
-.wvui-button--quiet.wvui-button--progressive:not( [ disabled ] ):hover {
-  color: #447ff5;
-  background-color: rgba(52, 123, 255, 0.2);
-}
-.wvui-button--quiet.wvui-button--progressive:not( [ disabled ] ):focus {
-  color: #36c;
-  border-color: #36c;
-  box-shadow: inset 0 0 0 1px #36c, inset 0 0 0 2px #fff;
-}
-.wvui-button--quiet.wvui-button--progressive:not( [ disabled ] ):active {
+.wvui-button--type-primary.wvui-button--action-progressive:not( [ disabled ] ) {
+  background-color: #36c;
   color: #fff;
+  border-color: #36c;
+}
+.wvui-button--type-primary.wvui-button--action-progressive:not( [ disabled ] ):hover {
+  background-color: #447ff5;
+  border-color: #447ff5;
+}
+.wvui-button--type-primary.wvui-button--action-progressive:not( [ disabled ] ):focus {
+  background-color: #36c;
+  border-color: #36c;
+  box-shadow: inset 0 0 0 1px #36c, inset 0 0 0 2px #fff;
+}
+.wvui-button--type-primary.wvui-button--action-progressive:not( [ disabled ] ):active {
   background-color: #2a4b8d;
   border-color: #2a4b8d;
   box-shadow: none;
 }
-.wvui-button--quiet.wvui-button--destructive:not( [ disabled ] ) {
-  color: #d33;
+.wvui-button--type-primary.wvui-button--action-destructive:not( [ disabled ] ) {
+  background-color: #d33;
+  color: #fff;
+  border-color: #d33;
 }
-.wvui-button--quiet.wvui-button--destructive:not( [ disabled ] ):hover {
-  color: #ff4242;
-  background-color: rgba(209, 29, 19, 0.2);
+.wvui-button--type-primary.wvui-button--action-destructive:not( [ disabled ] ):hover {
+  background-color: #ff4242;
+  border-color: #ff4242;
 }
-.wvui-button--quiet.wvui-button--destructive:not( [ disabled ] ):focus {
-  color: #d33;
+.wvui-button--type-primary.wvui-button--action-destructive:not( [ disabled ] ):focus {
+  background-color: #d33;
   border-color: #d33;
   box-shadow: inset 0 0 0 1px #d33, inset 0 0 0 2px #fff;
 }
-.wvui-button--quiet.wvui-button--destructive:not( [ disabled ] ):active {
-  color: #fff;
+.wvui-button--type-primary.wvui-button--action-destructive:not( [ disabled ] ):active {
   background-color: #b32424;
   border-color: #b32424;
   box-shadow: none;
 }
-.wvui-button--quiet[disabled] {
+.wvui-button--type-normal.wvui-button--action-progressive:not( [ disabled ] ) {
+  color: #36c;
+}
+.wvui-button--type-normal.wvui-button--action-progressive:not( [ disabled ] ):hover {
+  color: #447ff5;
+  border-color: #447ff5;
+}
+.wvui-button--type-normal.wvui-button--action-progressive:not( [ disabled ] ):focus {
+  color: #36c;
+  border-color: #36c;
+  box-shadow: inset 0 0 0 1px #36c, inset 0 0 0 2px #fff;
+}
+.wvui-button--type-normal.wvui-button--action-progressive:not( [ disabled ] ):active {
+  background-color: #eff3fa;
+  color: #2a4b8d;
+  border-color: #2a4b8d;
+  box-shadow: none;
+}
+.wvui-button--type-normal.wvui-button--action-destructive:not( [ disabled ] ) {
+  color: #d33;
+}
+.wvui-button--type-normal.wvui-button--action-destructive:not( [ disabled ] ):hover {
+  color: #ff4242;
+  border-color: #ff4242;
+}
+.wvui-button--type-normal.wvui-button--action-destructive:not( [ disabled ] ):focus {
+  color: #d33;
+  border-color: #d33;
+  box-shadow: inset 0 0 0 1px #d33, inset 0 0 0 2px #fff;
+}
+.wvui-button--type-normal.wvui-button--action-destructive:not( [ disabled ] ):active {
+  background-color: #ffffff;
+  color: #b32424;
+  border-color: #b32424;
+  box-shadow: none;
+}
+.wvui-button--type-quiet {
+  background-color: transparent;
+  color: #202122;
+  border-color: transparent;
+}
+.wvui-button--type-quiet:not( [ disabled ] ):hover {
+  background-color: rgba(0, 24, 73, 0.02745098);
+}
+.wvui-button--type-quiet:not( [ disabled ] ):focus {
+  border-color: #36c;
+  box-shadow: inset 0 0 0 1px #36c, inset 0 0 0 2px #fff;
+}
+.wvui-button--type-quiet:not( [ disabled ] ):active {
+  background-color: rgba(0, 36, 73, 0.08235294);
+  border-color: #72777d;
+  box-shadow: none;
+}
+.wvui-button--type-quiet.wvui-button--action-progressive:not( [ disabled ] ) {
+  color: #36c;
+}
+.wvui-button--type-quiet.wvui-button--action-progressive:not( [ disabled ] ):hover {
+  background-color: rgba(52, 123, 255, 0.2);
+  color: #447ff5;
+}
+.wvui-button--type-quiet.wvui-button--action-progressive:not( [ disabled ] ):focus {
+  color: #36c;
+  border-color: #36c;
+  box-shadow: inset 0 0 0 1px #36c, inset 0 0 0 2px #fff;
+}
+.wvui-button--type-quiet.wvui-button--action-progressive:not( [ disabled ] ):active {
+  background-color: #2a4b8d;
+  color: #fff;
+  border-color: #2a4b8d;
+  box-shadow: none;
+}
+.wvui-button--type-quiet.wvui-button--action-destructive:not( [ disabled ] ) {
+  color: #d33;
+}
+.wvui-button--type-quiet.wvui-button--action-destructive:not( [ disabled ] ):hover {
+  background-color: rgba(209, 29, 19, 0.2);
+  color: #ff4242;
+}
+.wvui-button--type-quiet.wvui-button--action-destructive:not( [ disabled ] ):focus {
+  color: #d33;
+  border-color: #d33;
+  box-shadow: inset 0 0 0 1px #d33, inset 0 0 0 2px #fff;
+}
+.wvui-button--type-quiet.wvui-button--action-destructive:not( [ disabled ] ):active {
+  background-color: #b32424;
+  color: #fff;
+  border-color: #b32424;
+  box-shadow: none;
+}
+.wvui-button--type-quiet[disabled] {
   color: #72777d;
 }
 
 .wvui-icon {
-  -webkit-box-align: center;
-          align-items: center;
+  color: #202122;
   display: -webkit-inline-box;
   display: inline-flex;
   /* stylelint-disable-line plugin/no-unsupported-browser-features */
+  -webkit-box-align: center;
+          align-items: center;
   -webkit-box-pack: center;
           justify-content: center;
   vertical-align: middle;
@@ -176,11 +215,11 @@
 }
 .wvui-input__start-icon,
 .wvui-input__end-icon {
-  min-height: 20px;
-  height: 100%;
+  color: #54595d;
   position: absolute;
   top: 0;
-  opacity: 0.67;
+  min-height: 20px;
+  height: 100%;
 }
 .wvui-input__start-icon {
   left: 1px;
@@ -200,19 +239,19 @@
 }
 .wvui-input__input {
   background-color: #fff;
-  box-shadow: inset 0 0 0 1px transparent;
   color: #000;
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  height: 2.28571429em;
   margin: 0;
   border: 1px solid #a2a9b1;
   border-radius: 2px;
   padding: 5px 8px;
-  font-size: inherit;
+  box-shadow: inset 0 0 0 1px transparent;
   font-family: inherit;
+  font-size: inherit;
   line-height: 1.42857143em;
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  height: 2.28571429em;
 }
 .wvui-input__input:not( [ disabled ] ) {
   -webkit-transition: border-color 250ms, box-shadow 250ms;
@@ -222,9 +261,9 @@
   border-color: #72777d;
 }
 .wvui-input__input:not( [ disabled ] ):focus {
-  outline: 0;
   border-color: #36c;
   box-shadow: inset 0 0 0 1px #36c;
+  outline: 0;
 }
 .wvui-input__input:not( [ disabled ] ):focus ~ .wvui-input__start-icon,
 .wvui-input__input:not( [ disabled ] ):focus ~ .wvui-input__end-icon {
@@ -232,15 +271,15 @@
 }
 .wvui-input__input[disabled] {
   background-color: #eaecf0;
-  -webkit-text-fill-color: #72777d;
   color: #72777d;
-  text-shadow: 0 1px 1px #fff;
+  -webkit-text-fill-color: #72777d;
   border-color: #c8ccd1;
+  text-shadow: 0 1px 1px #fff;
 }
 .wvui-input__input[disabled] ~ .wvui-input__start-icon,
 .wvui-input__input[disabled] ~ .wvui-input__end-icon {
-  pointer-events: none;
   opacity: 0.51;
+  pointer-events: none;
 }
 .wvui-input__input::-webkit-input-placeholder {
   color: #72777d;
@@ -294,6 +333,10 @@
           align-items: center;
   padding: 8px 12px;
   text-decoration: none;
+  -webkit-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
+  word-wrap: break-word;
 }
 .wvui-typeahead-suggestion--active {
   background-color: #eaecf0;
@@ -306,9 +349,9 @@
   flex-shrink: 0;
   width: 2.57142857em;
   height: 2.57142857em;
+  margin-right: 12px;
   border-radius: 2px;
   box-shadow: 0 0 1px 1px #eaecf0;
-  margin-right: 12px;
 }
 .wvui-typeahead-suggestion__thumbnail {
   display: inline-block;
@@ -323,7 +366,7 @@
           justify-content: center;
 }
 .wvui-typeahead-suggestion__thumbnail-icon {
-  opacity: 0.67;
+  color: #54595d;
 }
 .wvui-typeahead-suggestion__text {
   overflow: hidden;
@@ -331,13 +374,14 @@
 .wvui-typeahead-suggestion__text .wvui-typeahead-suggestion__description {
   color: #72777d;
   display: block;
+  overflow: hidden;
   font-size: 1em;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
 }
 
 .wvui-typeahead-search {
+  background-color: #fff;
   border: 1px solid #a2a9b1;
   border-radius: 2px;
 }
@@ -352,11 +396,12 @@
   margin: -1px;
 }
 .wvui-typeahead-search__submit {
-  position: relative;
-  margin: -1px -1px -1px 0;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
   opacity: 0;
+  position: relative;
+  flex-shrink: 0;
+  margin: -1px -1px -1px 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
   -webkit-transition: opacity 100ms;
   transition: opacity 100ms;
 }
@@ -364,24 +409,24 @@
   z-index: 1;
 }
 .wvui-typeahead-search__submit:focus {
-  z-index: 1;
   opacity: 1;
+  z-index: 1;
 }
 .wvui-typeahead-search__suggestions {
   background-color: #fff;
+  list-style: none;
   display: none;
   position: absolute;
   top: 2.28571429em;
   right: 0;
   left: 0;
   box-sizing: border-box;
+  margin: 0;
   border: 1px solid #a2a9b1;
   border-top-width: 0;
   border-radius: 0 0 2px 2px;
-  margin: 0;
   padding: 0;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25);
-  list-style: none;
 }
 .wvui-typeahead-search__suggestions__footer {
   color: #202122;
@@ -399,10 +444,10 @@
   color: #202122;
 }
 .wvui-typeahead-search__suggestions__footer .wvui-icon {
+  color: #54595d;
   width: auto;
   height: 2.57142857em;
   margin-right: 12px;
-  opacity: 0.67;
 }
 .wvui-typeahead-search__suggestions__footer--active {
   background-color: #eaecf0;
@@ -443,9 +488,9 @@
 }
 .wvui-typeahead-search--show-thumbnail .wvui-input__input:focus {
   position: relative;
-  padding-left: calc(12px + 2.57142857em + 12px);
-  width: calc(100% + 24px);
   left: -24px;
+  width: calc(100% + 24px);
+  padding-left: calc(12px + 2.57142857em + 12px);
 }
 .wvui-typeahead-search--show-thumbnail .wvui-input__input:focus + .wvui-input__start-icon {
   left: -11px;
@@ -454,19 +499,21 @@
   left: -24px;
 }
 .wvui-typeahead-search--show-thumbnail .wvui-typeahead-search__suggestion {
-  padding-left: 12px;
   padding-right: 12px;
+  padding-left: 12px;
 }
 .wvui-typeahead-search--show-thumbnail .wvui-typeahead-search__suggestions__footer {
-  padding-left: 12px;
   padding-right: 12px;
+  padding-left: 12px;
 }
 .wvui-typeahead-search--show-thumbnail .wvui-typeahead-search__suggestions__footer__text {
-  text-overflow: ellipsis;
-  overflow: hidden;
+  -webkit-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
+  word-wrap: break-word;
 }
 .wvui-typeahead-search--show-thumbnail .wvui-typeahead-search__suggestions-footer-article-icon {
-  width: 2.57142857em;
   flex-shrink: 0;
+  width: 2.57142857em;
 }
 
