stylelint: Enforce no-unsupported-browser-features
Change-Id: Ic4fb9d27aa94594584327a3d1fc5495861e09ebd

--- a/resources/src/mediawiki.skinning/legacy.less
+++ b/resources/src/mediawiki.skinning/legacy.less
@@ -82,6 +82,7 @@ abbr[ title ], /* Note: Duplicate ruleset if skins load `normalize` and `legacy`
 	cursor: help;
 }
 
+/* stylelint-disable-next-line plugin/no-unsupported-browser-features */
 @supports ( text-decoration: underline dotted ) {
 	abbr[ title ], /* FIXME: Remove similar to `abbr` above. */
 	.explain[ title ] {
