--- a/resources/src/mediawiki.content.json.less
+++ b/resources/src/mediawiki.content.json.less
@@ -28,6 +28,7 @@
 		vertical-align: top;
 
 		span {
+			/* stylelint-disable-next-line plugin/no-unsupported-browser-features */
 			position: sticky;
 			top: 0.5em;
 		}
