--- a/resources/src/mediawiki.interface.helpers.styles.less
+++ b/resources/src/mediawiki.interface.helpers.styles.less
@@ -136,6 +136,7 @@ span.history-deleted {
 
 span.mw-history-suppressed {
 	font-weight: bold;
+	/* stylelint-disable-next-line plugin/no-unsupported-browser-features */
 	text-decoration-style: double;
 }
 
