build: Upgrade stylelint-config-wikimedia from 0.10.3 to 0.11.1
Just disabling the `declaration-property-unit-disallowed-list` failures
for now, but it looks like at least most of these could be switched over
to ems without breaking anything. For another patch!

Change-Id: I9220334d670f71eba1b0e392da826036d54bc2f3

--- a/mw-config/config.css
+++ b/mw-config/config.css
@@ -203,6 +203,8 @@ body {
 	padding-left: 40px; /* 32 px for the image (above), plus some breathing room */
 	height: 32px; /* provide enough vertical room for the image */
 	display: inline-block; /* allow the height property (above) to work */
+	/* TODO: re-evaluate this */
+	/* stylelint-disable-next-line declaration-property-unit-disallowed-list */
 	line-height: 32px; /* center the text vertically */
 }
 
