--- a/resources/src/mediawiki.editfont.less
+++ b/resources/src/mediawiki.editfont.less
@@ -15,6 +15,8 @@
 .mw-editfont-monospace,
 .mw-editfont-sans-serif,
 .mw-editfont-serif {
+	/* TODO: Re-evaluate whether we should keep this over-ride or switch to ems */
+	/* stylelint-disable-next-line declaration-property-unit-disallowed-list */
 	font-size: 13px;
 	/* Standardize tab width when in edit areas */
 	/* stylelint-disable-next-line plugin/no-unsupported-browser-features */
@@ -29,6 +31,8 @@
 		font-size: inherit;
 
 		> .oo-ui-inputWidget-input {
+			/* TODO: Re-evaluate whether we should keep this over-ride or switch to ems */
+			/* stylelint-disable-next-line declaration-property-unit-disallowed-list */
 			font-size: 13px;
 		}
 
