--- a/resources/src/mediawiki.diff.styles/diff.less
+++ b/resources/src/mediawiki.diff.styles/diff.less
@@ -81,6 +81,8 @@
 .diff-addedline,
 .diff-deletedline,
 .diff-context {
+	/* TODO: Re-evaluate whether we should keep this over-ride or switch to ems */
+	/* stylelint-disable-next-line declaration-property-unit-disallowed-list */
 	font-size: 13px;
 	line-height: 1.6;
 	vertical-align: top;
