Add wider desktop breakpoint
Bug: T284243
Change-Id: Icb349987c5f5939b7f4ffa477ac1ecb35b5425e7

--- a/resources/src/mediawiki.less/mediawiki.skin.defaults.less
+++ b/resources/src/mediawiki.less/mediawiki.skin.defaults.less
@@ -37,6 +37,10 @@
 // Minimum available screen width at which a device can be considered a desktop.
 @width-breakpoint-desktop: 1000px;
 
+// Wider desktop breakpoint
+// @since 1.37
+@width-breakpoint-desktop-wide: 1200px;
+
 // == Size properties beyond Box Model ==
 // These are the center point for skin sizing.
 // Note that these are recommended to be set in relative units like `em` in order to let users
